fix: article page mobile horizontal overflow - table overflow-x-auto

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -302,6 +302,10 @@ article img {
     @apply my-6.5;
   }
 
+  table {
+    @apply block overflow-x-auto;
+  }
+
   b,
   strong,
   th,
